--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="description" content="Kevin's personal website">
     <meta name="author" content="Kevin">
 
-    <link rel="stylesheet" href="assets/css/layout/main.scss">
+    <link rel="stylesheet" href="assets/css/main.css">
    
     <!--Fonts-->
     <link href="https://fonts.googleapis.com/css?family=Montserrat|Open+Sans:700" rel="stylesheet">
@@ -15,30 +15,43 @@
 
 <body>
     <nav>
-      <div>
+      <div class="nav">
         <div class ="nav__left">
           <a class="logo">Kevin Gao</a>
         </div>
         <div class ="nav__right">
           <ul class="menu">
-            <li><a>Home</a></li>
-            <li><a>About</a></li>
-            <li><a>Portfolio</a></li>
-            <li><a>Contact</a></li>
+            <li class="menu__links"><a>About</a></li>
+            <li class="menu__links"><a>Portfolio</a></li>
+            <li class="menu__links"><a>Contact</a></li>
           </ul>
         </div>
       </div>
     </nav>
 
     <section id="header">
-
+      <div class="header__content">
+        <div>
+          <h1>Kevin Gao</h1>
+          <p>Aspiring Programmer</p>
+        </div>
+      </div>
     </section>
 
     <section id="about">
+      <div>
+        <img src="">
+      </div>
+      <div>
+        <h3></h3>
+        <p></p>
+      </div>
     </section>
 
     <section id="portfolio">
-
+      <div>
+        <p>Coming Soon...</p>
+      </div>
     </section>
 
     <footer>
@@ -51,7 +64,9 @@
         </ul>
       </div>
       <div class="footer__contact">
+        <ul class="">
 
+        </ul>
       </div>
 
     </footer>
