--- a/index.html
+++ b/index.html
@@ -10,65 +10,67 @@
    
     <!--Fonts-->
     <link href="https://fonts.googleapis.com/css?family=Montserrat|Open+Sans:700" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:700" rel="stylesheet">
 </head>
 
 <body>
-    <nav>
-      <div class="nav">
-        <div class ="nav__left">
-          <a class="logo">Kevin Gao</a>
-        </div>
-        <div class ="nav__right">
-          <ul class="menu">
-            <li class="menu__links"><a>About</a></li>
-            <li class="menu__links"><a>Portfolio</a></li>
-            <li class="menu__links"><a>Contact</a></li>
-          </ul>
-        </div>
-      </div>
-    </nav>
+  <div id="nav">
+    <a class="logo left center-vertical">Kevin Gao</a>
+    <ul class="menu right">
+      <li class="menu__item"><a href="#about" class="link">About</a></li>
+      <li class="menu__item"><a href="#portfolio" class="link">Portfolio</a></li>
+      <li class="menu__item"><a href="#contact" class="link">Contact</a></li>
+    </ul>
+  </div>
 
     <section id="header">
-      <div class="header__content">
-        <div>
+      <div class="background">
+        <div class="container center">
           <h1>Kevin Gao</h1>
-          <p>Aspiring Programmer</p>
+          <p>Aspiring Programmer</p>  
         </div>
-      </div>
+        <a class="arrow-button" href="#about"><span></span><span></span><span></span>Scroll</a>
+      </div> 
     </section>
 
     <section id="about">
-      <div>
-        <img src="">
-      </div>
-      <div>
-        <h3></h3>
-        <p></p>
+      <div class="about__container center-horizontal">
+        <div class="about__portrait">
+          <img src="assets/imgs/about.jpg">
+        </div>
+        <div class="about__information">
+          <h3>About Me</h3>
+          <p>I am an aspiring highschool programmer looking towards a career in software engineering. 
+             I am a sociable but awkard attituded person who loves to spend time with people. 
+             I like logic based thinking as well as order and structure.
+             Math and Computer Science are my current main areas of studies.
+          </p>
+        </div>
       </div>
     </section>
 
     <section id="portfolio">
-      <div>
+      <div class="portfolio__container">
         <p>Coming Soon...</p>
       </div>
     </section>
 
     <footer>
-      <div class="footer__navigation">
-        <ul class="nav__links">
-          <li><a>Home</a></li>
-          <li><a>About</a></li>
-          <li><a>Portfolio</a></li>
-          <li><a>Contact</a></li>
-        </ul>
-      </div>
-      <div class="footer__contact">
-        <ul class="">
+      <div class="footer__container">
+        <div class="footer__navigation">
+          <ul class="menu">
+            <li class="menu__item"><a href="#about" class="link">About</a></li>
+            <li class="menu__item"><a href="#portfolio" class="link">Portfolio</a></li>
+            <li class="menu__item"><a href="#contact" class="link">Contact</a></li>
+          </ul>
+        </div>
+        <div class="footer__contact">
+          <ul class="menu">
 
-        </ul>
+          </ul>
+        </div>
       </div>
-
     </footer>
 
     <script src="assets/js/index.js"></script>
