--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:700" rel="stylesheet">
     <!--Icons-->
-    <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.1/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
 </head>
 
 <body>
@@ -60,10 +60,10 @@
   <footer>
     <div class="container">
       <div class="right">
-		  	<a href="https://www.facebook.com/profile.php?id=100008226697715" target="_blank"><i class="fa fa-facebook"></i></a>
-		  	<a href="https://twitter.com/Kevin_Boxu_Gao" target="_blank"><i class="fa fa-twitter"></i></a>
-		  	<a href="#"><i class="fa fa-linkedin" target="_blank"></i></a>
-		  	<a href="https://github.com/KevinBoxuGao" target="_blank"><i class="fa fa-github"></i></a>
+		  	<a href="https://www.facebook.com/profile.php?id=100008226697715" target="_blank"><i class="fab fa-facebook"></i></a>
+		  	<a href="https://twitter.com/Kevin_Boxu_Gao" target="_blank"><i class="fab fa-twitter"></i></a>
+		  	<a href="#"><i class="fab fa-linkedin" target="_blank"></i></a>
+		  	<a href="https://github.com/KevinBoxuGao" target="_blank"><i class="fab fa-github"></i></a>
 		  </div>
 		  <div class="left">
 		  	<p class="links">
