--- a/index.html
+++ b/index.html
@@ -13,13 +13,14 @@
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:700" rel="stylesheet">
     <!--Icons-->
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.1/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
+    <script src="js/assets/main.js"></script>
 </head>
 
 <body>
-  <nav class="navbar">
-    <div class="container">
-      <a class="logo left center-vertical" href="#header">Kevin Gao</a>
-      <ul class="nav right">
+  <nav id="navbar">
+    <div class="navbar__container">
+      <a class="navbar__logo" href="#header">Kevin Gao</a>
+      <ul class="nav">
         <li class="nav__item"><a href="#about">About</a></li>
         <li class="nav__item"><a href="#portfolio">Portfolio</a></li>
         <li class="nav__item"><a href="#contact">Contact</a></li>
@@ -28,8 +29,8 @@
   </nav>
 
   <section id="header">
-    <div class="background">
-      <div class="container center">
+    <div class="header__background">
+      <div class="header__container">
         <h1 class="header__name">Kevin Gao</h1>
         <h3 class="header__title">Aspiring Programmer</h3>  
       </div>
@@ -38,9 +39,9 @@
   </section>
 
   <section id="about">
-    <div class="container">
-      <img class="circle portrait"src="assets/imgs/about.jpg">
-      <div class="information">
+    <div class="about__container">
+      <img class="about__portrait"src="assets/imgs/about.jpg">
+      <div class="about__information">
         <h2>About Me</h2>
         <p>I am an aspiring highschool programmer looking towards a career in software engineering. 
            I am a sociable but awkard attituded person who loves to spend time with people. 
@@ -52,28 +53,29 @@
   </section>
 
   <section id="portfolio">
-    <div class="container">
+    <div class="portfolio__container">
       <h1>Coming Soon...</h1>
     </div>
   </section>
 
-  <footer>
-    <div class="container">
-      <div class="right">
+  <footer id="footer">
+    <div class="footer__container">
+      <div class="footer__right">
 		  	<a href="https://www.facebook.com/profile.php?id=100008226697715" target="_blank"><i class="fab fa-facebook"></i></a>
 		  	<a href="https://twitter.com/Kevin_Boxu_Gao" target="_blank"><i class="fab fa-twitter"></i></a>
 		  	<a href="#"><i class="fab fa-linkedin" target="_blank"></i></a>
 		  	<a href="https://github.com/KevinBoxuGao" target="_blank"><i class="fab fa-github"></i></a>
 		  </div>
-		  <div class="left">
-		  	<p class="links">
+		  <div class="footer__left">
+		  	<p class="footer__links">
           <a href="#header"class="link">Top</a>
           <a href="#about" class="link">About</a>
           <a href="#portfolio" class="link">Portfolio</a>
 		  	</p>
-		  	<p>Kevin Gao</p>
+		  	<p class="footer__logo">Kevin Gao</p>
       </div>
     </div>
   </footer>
+
 </body>
 </html>
