--- a/index.html
+++ b/index.html
@@ -6,41 +6,47 @@
     <meta name="description" content="Kevin's personal website">
     <meta name="author" content="Kevin">
 
-    <link rel="stylesheet" href="assets/css/main.css">
+    <link rel="stylesheet" href="styles/css/main.css">
     <!--Fonts-->
     <link href="https://fonts.googleapis.com/css?family=Montserrat|Open+Sans:700" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:700" rel="stylesheet">
     <!--Icons-->
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.1/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
-    <script src="js/assets/main.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script src="styles/js/main.js"></script>
 </head>
 
 <body>
-  <nav id="navbar">
-    <div class="navbar__container">
-      <a class="navbar__logo" href="#header">Kevin Gao</a>
-      <ul class="nav">
-        <li class="nav__item"><a href="#about">About</a></li>
-        <li class="nav__item"><a href="#portfolio">Portfolio</a></li>
-        <li class="nav__item"><a href="#contact">Contact</a></li>
-      </ul>
+
+  <nav class="navbar">
+    <div class="container">
+      <div class="navbar__brand">
+        <a class="brand__item" href="#header">Kevin Gao</a>
+      </div>
+    
+      <div class="navbar__menu">
+        <ul class="menu__links">
+          <li class="menu__item"><a href="#about">About</a></li>
+          <li class="menu__item"><a href="#portfolio">Skills</a></li>
+          <li class="menu__item"><a href="#portfolio">Portfolio</a></li>
+          <li class="menu__item"><a href="#contact">Contact</a></li>
+        </ul>
+      </div>
     </div>
   </nav>
 
-  <section id="header">
-    <div class="header__background">
-      <div class="header__container">
-        <h1 class="header__name">Kevin Gao</h1>
-        <h3 class="header__title">Aspiring Programmer</h3>  
-      </div>
-      <a class="arrow-button" href="#about"><span></span><span></span><span></span>Scroll</a>
-    </div> 
+  <section class="hero">
+    <div class="container">
+      <h1 class="title">Kevin Gao</h1>
+      <h4 class="subtitle">Front-End Web Developer, Aspiring Programmer</h4>  
+      <img class="portrait"src="styles/imgs/about.jpg">
+    </div>
   </section>
 
-  <section id="about">
+  <section class="about">
     <div class="about__container">
-      <img class="about__portrait"src="assets/imgs/about.jpg">
+      
       <div class="about__information">
         <h2>About Me</h2>
         <p>I am an aspiring highschool programmer looking towards a career in software engineering. 
@@ -52,13 +58,16 @@
     </div>
   </section>
 
-  <section id="portfolio">
+  <section class="skills">
+  </section>
+
+  <section class="portfolio">
     <div class="portfolio__container">
       <h1>Coming Soon...</h1>
     </div>
   </section>
 
-  <footer id="footer">
+  <footer class="footer">
     <div class="footer__container">
       <div class="footer__right">
 		  	<a href="https://www.facebook.com/profile.php?id=100008226697715" target="_blank"><i class="fab fa-facebook"></i></a>
