--- a/index.html
+++ b/index.html
@@ -45,9 +45,8 @@
   </section>
 
   <section class="about">
-    <div class="about__container">
-      
-      <div class="about__information">
+    <div class="container">
+      <div class="information">
         <h2>About Me</h2>
         <p>I am an aspiring highschool programmer looking towards a career in software engineering. 
            I am a sociable but awkard attituded person who loves to spend time with people. 
@@ -80,6 +79,7 @@
           <a href="#header"class="link">Top</a>
           <a href="#about" class="link">About</a>
           <a href="#portfolio" class="link">Portfolio</a>
+          <a href="#contact" class="link">Contact</a>
 		  	</p>
 		  	<p class="footer__logo">Kevin Gao</p>
       </div>
