--- a/index.html
+++ b/index.html
@@ -32,6 +32,9 @@
           <li class="menu__item"><a href="#portfolio">Portfolio</a></li>
           <li class="menu__item"><a href="#contact">Contact</a></li>
         </ul>
+        <a href="javascript:void(0);" class="navbar__button" onclick="openNav()">
+          <i class="fa fa-bars"></i>
+        </a>
       </div>
     </div>
   </nav>
@@ -40,7 +43,7 @@
     <div class="container">
       <h1 class="title">Kevin Gao</h1>
       <h4 class="subtitle">Front-End Web Developer, Aspiring Programmer</h4>  
-      <img class="portrait"src="styles/imgs/about.jpg">
+      <img class="portrait"src="styles/imgs/portrait.jpg">
     </div>
   </section>
 
@@ -61,8 +64,22 @@
   </section>
 
   <section class="portfolio">
-    <div class="portfolio__container">
-      <h1>Coming Soon...</h1>
+    <div class="container">
+      <div class="portfolio__item">
+       <img src="styles/imgs/Orderly-lifestyle.png" class="portfolio__image">
+       <div class="additional-information">
+         <h3>Orderly lifestyle</h3>
+         <p>A web app created using html, css, jquery, flask, and google app engine datastore to track basic tasks</p>
+       </div>
+      </div>
+
+      <div class="portfolio__item">
+       <img src="styles/imgs/Orderly-lifestyle.png" class="portfolio__image">
+       <div class="additional-information">
+         <h3>Orderly lifestyle</h3>
+         <p>A web app created using html, css, jquery, flask, and google app engine datastore to track basic tasks</p>
+       </div>
+      </div> 
     </div>
   </section>
 
