--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <title>Kevin's Website</title>
     <meta name="description" content="Kevin's personal website">
     <meta name="author" content="Kevin">
+    
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
 
     <link rel="stylesheet" href="styles/css/main.css">
     <!--Fonts-->
@@ -21,22 +24,18 @@
 
   <nav class="nav">
     <div class="nav__inner">
-      <div class="brand">
+      <div class="brand nav__brand">
         <a class="brand__name" href="#header">Kevin Gao</a>
       </div>
-    
-
-      <div class="navbar__menu">
-        <ul class="menu__links">
-          <li class="menu__item"><a href="#about">About</a></li>
-          <li class="menu__item"><a href="#portfolio">Skills</a></li>
-          <li class="menu__item"><a href="#portfolio">Portfolio</a></li>
-          <li class="menu__item"><a href="#contact">Contact</a></li>
-        </ul>
-        <a href="javascript:void(0);" class="navbar__button" onclick="openNav()">
-          <i class="fa fa-bars"></i>
-        </a>
-      </div>
+      <a href="javascript:void(0);" class="button nav__button" onclick="toggleNav()">
+        <i class="fa fa-bars"></i>
+      </a>
+      <div class="menu nav__menu">
+        <a class="menu__link" href="#about">About</a>
+        <a class="menu__link" href="#portfolio">Skills</a>
+        <a class="menu__link" href="#portfolio">Portfolio</a>
+        <a class="menu__link" href="#contact">Contact</a>
+      </div>  
     </div>
   </nav>
 
@@ -44,8 +43,9 @@
     <div class="hero__inner">
       <h1 class="hero__title">Kevin Gao</h1>
       <h4 class="hero__subtitle">Front-End Web Developer, Aspiring Programmer</h4>  
-      <img class="hero__portrait"src="styles/imgs/about.jpg">
+      <img class="hero__portrait"src="styles/imgs/portrait.jpg">
     </div>
+    <a></a>
   </section>
 
   <section class="about">
@@ -65,10 +65,8 @@
   <section class="portfolio">
     <div class="portfolio__inner">
       <img src="styles/imgs/Orderly-lifestyle.png" class="portfolio__image">
-       <div class="additional-information">
-         <h3>Orderly lifestyle</h3>
-         <p>A web app created using html, css, jquery, flask, and google app engine datastore to track basic tasks</p>
-       </div>
+        <h3>Orderly lifestyle</h3>
+        <p>A web app created using html, css, jquery, flask, and google app engine datastore to track basic tasks</p>
     </div>
   </section>
 
