--- a/index.html
+++ b/index.html
@@ -27,15 +27,23 @@
       <div class="brand nav__brand">
         <a class="brand__name" href="#header">Kevin Gao</a>
       </div>
-      <a href="javascript:void(0);" class="button nav__button" onclick="toggleNav()">
-        <i class="fa fa-bars"></i>
-      </a>
       <div class="menu nav__menu">
-        <a class="menu__link" href="#about">About</a>
-        <a class="menu__link" href="#portfolio">Skills</a>
-        <a class="menu__link" href="#portfolio">Portfolio</a>
-        <a class="menu__link" href="#contact">Contact</a>
-      </div>  
+        <a href="javascript:void(0);" class="button menu__button" onclick="toggleNav()">
+          <i class="fa fa-bars"></i>
+        </a>
+        <div class="menu__items">
+          <a class="menu__link" href="#about">About</a>
+          <a class="menu__link" href="#portfolio">Skills</a>
+          <a class="menu__link" href="#portfolio">Portfolio</a>
+          <a class="menu__link" href="#contact">Contact</a>
+        </div>
+      </div>   
+      <div class="sidebar">
+        <a class="sidebar__link" href="#about">About</a>
+        <a class="sidebar__link" href="#portfolio">Skills</a>
+        <a class="sidebar__link" href="#portfolio">Portfolio</a>
+        <a class="sidebar__link" href="#contact">Contact</a>
+      </div>
     </div>
   </nav>
 
