--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
   <nav class="nav">
     <div class="nav__inner">
       <div class="brand nav__brand">
-        <a class="brand__name" href="#header">Kevin Gao</a>
+        <a class="brand__name" href="#hero">Kevin Gao</a>
       </div>
       <div class="menu nav__menu">
         <a href="javascript:void(0);" class="button menu__button" onclick="toggleNav()">
@@ -33,30 +33,31 @@
         </a>
         <div class="menu__items">
           <a class="menu__link" href="#about">About</a>
-          <a class="menu__link" href="#portfolio">Skills</a>
+          <a class="menu__link" href="#about">Skills</a>
           <a class="menu__link" href="#portfolio">Portfolio</a>
-          <a class="menu__link" href="#contact">Contact</a>
+          <a class="menu__link" href="assets/KevinGaoResume.pdf">Resume</a>
+          <a class="menu__link" href="#footer">Contact</a>
         </div>
       </div>   
       <div class="sidebar">
         <a class="sidebar__link" href="#about">About</a>
         <a class="sidebar__link" href="#portfolio">Skills</a>
         <a class="sidebar__link" href="#portfolio">Portfolio</a>
-        <a class="sidebar__link" href="#contact">Contact</a>
+        <a class="sidebar__link" href="assets/KevinGaoResume.pdf">Resume</a>
+        <a class="sidebar__link" href="#footer">Contact</a>
       </div>
     </div>
   </nav>
 
-  <section class="hero">
+
+  <section class="hero" id="hero">
     <div class="hero__inner">
       <h1 class="hero__title">Kevin Gao</h1>
       <h4 class="hero__subtitle">Front-End Web Developer, Aspiring Programmer</h4>  
       <img class="hero__portrait"src="styles/imgs/portrait.jpg">
     </div>
-    <a></a>
   </section>
-
-  <section class="about">
+  <section class="about" id="about">
     <div class="about__inner">
       <h2 class="about__title">About Me</h2>
       <p class="about__paragraph">I am an aspiring highschool programmer looking towards a career in software engineering. 
@@ -66,19 +67,48 @@
       </p>
     </div>
   </section>
-
   <section class="skills">
-  </section>
+    <div class="programming-languages skills__section">
+      <ul>
+        
+        </ul>
+    </div>
+    <div class="computer-software skills__section">
+      <ul>
+        
+      </ul>
+    </div>
+    <div class="soft-skills skills__section">
+      <ul>
 
-  <section class="portfolio">
+      </ul>
+    </div>
+  </section>
+  <section class="portfolio" id="portfolio">
+    <h2>Portfolio</h2>
     <div class="portfolio__inner">
-      <img src="styles/imgs/Orderly-lifestyle.png" class="portfolio__image">
-        <h3>Orderly lifestyle</h3>
-        <p>A web app created using html, css, jquery, flask, and google app engine datastore to track basic tasks</p>
+      <div class="portfolio__item"> 
+        <img src="styles/imgs/Orderly-lifestyle.png" class="portfolio__image">
+        <div class="item__information">
+          <div class="item__text">
+            <h4>Orderly lifestyle</h4>
+            <p>A web app created using html, css, jquery, flask, and google app engine datastore to track basic tasks.</p>
+          </div>
+        </div>
+      </div> 
+      <div class="portfolio__item"> 
+          <img src="styles/imgs/Offline Assist.PNG" class="portfolio__image">
+          <div class="item__information">
+            <div class="item__text">
+              <h4>Offline Assist</h4>
+              <p>An offline assistance platform for JAMHacks 3 that allows access to google services through the use of SMS. Used Twilio to communicate between a python flask server and a client's SMS</p>
+            </div>
+          </div>
+        </div> 
     </div>
   </section>
 
-  <footer class="footer">
+  <footer class="footer" id="footer">
     <div class="footer__inner">
       <div class="footer__contact">
 		  	<a href="https://www.facebook.com/profile.php?id=100008226697715" target="_blank"><i class="fab fa-facebook"></i></a>
