--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
       <img class="hero__portrait"src="styles/imgs/portrait.jpg">
     </div>
   </section>
+
   <section class="about" id="about">
     <div class="about__inner">
       <h2 class="about__title">About Me</h2>
@@ -67,23 +68,47 @@
       </p>
     </div>
   </section>
-  <section class="skills">
-    <div class="programming-languages skills__section">
-      <ul>
-        
-        </ul>
-    </div>
-    <div class="computer-software skills__section">
-      <ul>
-        
-      </ul>
-    </div>
-    <div class="soft-skills skills__section">
-      <ul>
 
-      </ul>
+  <section class="skills" id="skills">
+    <h3 class="title">Skills</h3>
+    <div class="skills__inner">
+      <div class="programming-languages skills__section">
+        <h4 class="skill__title">Programming Languages and Frameworks</h4>
+        <ul>
+          <li>HTML</li>
+          <li>CSS</li>
+          <li>SASS</li>
+          <li>Javascript</li>
+          <li>JQuery</li>
+          <li>Python</li>
+          <li>C++</li>
+          <li>Google App Engine</li>
+          <li>Firebase</li>
+        </ul>
+      </div>
+      <div class="computer-software skills__section">
+        <h4 class="skill__title">Computer Software</h4>
+        <ul>
+          <li>Git</li>
+          <li>Command Prompt</li>
+          <li>Google Drive</li>
+          <li>Microsoft Office</li>
+        </ul>
+      </div>
+      <div class="soft-skills skills__section">
+        <h4 class="skill__title">Soft Skills</h4>
+        <ul>    
+          <li>Communication</li>
+          <li>Public Speaking</li>
+          <li>Organization</li>
+          <li>Time Management</li>
+          <li>Critical Thinking</li>
+          <li>Problem Solving</li>
+        </ul>
+      </div>
     </div>
   </section>
+
   <section class="portfolio" id="portfolio">
     <h2>Portfolio</h2>
     <div class="portfolio__inner">
@@ -91,7 +116,7 @@
         <img src="styles/imgs/Orderly-lifestyle.png" class="portfolio__image">
         <div class="item__information">
           <div class="item__text">
-            <h4>Orderly lifestyle</h4>
+            <h4 class="item__title">Orderly lifestyle</h4>
             <p>A web app created using html, css, jquery, flask, and google app engine datastore to track basic tasks.</p>
           </div>
         </div>
@@ -100,7 +125,7 @@
           <img src="styles/imgs/Offline Assist.PNG" class="portfolio__image">
           <div class="item__information">
             <div class="item__text">
-              <h4>Offline Assist</h4>
+              <h4 class="item__title">Offline Assist</h4>
               <p>An offline assistance platform for JAMHacks 3 that allows access to google services through the use of SMS. Used Twilio to communicate between a python flask server and a client's SMS</p>
             </div>
           </div>
@@ -117,10 +142,11 @@
 		  	<a href="https://github.com/KevinBoxuGao" target="_blank"><i class="fab fa-github"></i></a>
 		  </div>
 		  <p class="footer__links">
-        <a href="#header"class="menu__link">Top</a>
+        <a href="#hero"class="menu__link">Top</a>
         <a href="#about" class="menu__link">About</a>
+        <a href="#skills" class="menu__link">Skills</a>
         <a href="#portfolio" class="menu__link">Portfolio</a>
-        <a href="#contact" class="menu__link">Contact</a>
+        <a href="assets/KevinGaoResume.pdf" class="menu__link">Resume</a>
 		  </p>
 		  <p class="footer__logo">Kevin Gao</p>
       </div>
