--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
     <h3 class="title">Skills</h3>
     <div class="skills__inner">
       <div class="programming-languages skills__section">
-        <h4 class="skill__title">Programming Languages and Frameworks</h4>
+        <h4 class="skills__title">Programming Languages and Frameworks</h4>
         <ul>
           <li>HTML</li>
           <li>CSS</li>
@@ -87,7 +87,7 @@
         </ul>
       </div>
       <div class="computer-software skills__section">
-        <h4 class="skill__title">Computer Software</h4>
+        <h4 class="skills__title">Computer Software</h4>
         <ul>
           <li>Git</li>
           <li>Command Prompt</li>
@@ -96,7 +96,7 @@
         </ul>
       </div>
       <div class="soft-skills skills__section">
-        <h4 class="skill__title">Soft Skills</h4>
+        <h4 class="skills__title">Soft Skills</h4>
         <ul>    
           <li>Communication</li>
           <li>Public Speaking</li>
