--- a/index.html
+++ b/index.html
@@ -112,16 +112,19 @@
   <section class="portfolio" id="portfolio">
     <h2>Portfolio</h2>
     <div class="portfolio__inner">
-      <div class="portfolio__item"> 
-        <img src="styles/imgs/Orderly-lifestyle.png" class="portfolio__image">
-        <div class="item__information">
-          <div class="item__text">
-            <h4 class="item__title">Orderly lifestyle</h4>
-            <p>A web app created using html, css, jquery, flask, and google app engine datastore to track basic tasks.</p>
+      <a href="https://orderly-lifestyle.appspot.com/">
+        <div class="portfolio__item"> 
+          <img src="styles/imgs/Orderly-lifestyle.png" class="portfolio__image">
+          <div class="item__information">
+            <div class="item__text">
+              <h4 class="item__title">Orderly lifestyle</h4>
+              <p>A web app created using html, css, jquery, flask, and google app engine datastore to track basic tasks.</p>
+            </div>
           </div>
-        </div>
-      </div> 
-      <div class="portfolio__item"> 
+        </div> 
+      </a>
+      <a href="https://github.com/KevinBoxuGao/Offline-Assistance">
+        <div class="portfolio__item"> 
           <img src="styles/imgs/Offline Assist.PNG" class="portfolio__image">
           <div class="item__information">
             <div class="item__text">
@@ -129,7 +132,8 @@
               <p>An offline assistance platform for JAMHacks 3 that allows access to google services through the use of SMS. Used Twilio to communicate between a python flask server and a client's SMS</p>
             </div>
           </div>
-        </div> 
+        </div>
+      </a> 
     </div>
   </section>
 
@@ -138,7 +142,7 @@
       <div class="footer__contact">
 		  	<a href="https://www.facebook.com/profile.php?id=100008226697715" target="_blank"><i class="fab fa-facebook"></i></a>
 		  	<a href="https://twitter.com/Kevin_Boxu_Gao" target="_blank"><i class="fab fa-twitter"></i></a>
-		  	<a href="#"><i class="fab fa-linkedin" target="_blank"></i></a>
+		  	<a href="https://www.linkedin.com/in/kevin-gao-1b8777186"><i class="fab fa-linkedin" target="_blank"></i></a>
 		  	<a href="https://github.com/KevinBoxuGao" target="_blank"><i class="fab fa-github"></i></a>
 		  </div>
 		  <p class="footer__links">
