--- a/public/index.html
+++ b/public/index.html
@@ -8,13 +8,16 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <!--Fonts-->
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans|Source+Sans+Pro&display=swap" rel="stylesheet"> 
 </head>
 <body>
   <div id="navigation">
     <nav class="navbar navbar-expand-lg navbar-fixed-top" >
       <a class="navbar-brand" href="#">Kevin Gao</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon">yes</span>
+        <span class="navbar-toggler-icon">
+          <svg aria-hidden="true" focusable="false" data-prefix="fas" data-icon="bars" class="svg-inline--fa fa-bars fa-w-14" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512"><path fill="currentColor" d="M16 132h416c8.837 0 16-7.163 16-16V76c0-8.837-7.163-16-16-16H16C7.163 60 0 67.163 0 76v40c0 8.837 7.163 16 16 16zm0 160h416c8.837 0 16-7.163 16-16v-40c0-8.837-7.163-16-16-16H16c-8.837 0-16 7.163-16 16v40c0 8.837 7.163 16 16 16zm0 160h416c8.837 0 16-7.163 16-16v-40c0-8.837-7.163-16-16-16H16c-8.837 0-16 7.163-16 16v40c0 8.837 7.163 16 16 16z"></path></svg>
+        </span>
       </button>
       
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
@@ -38,12 +41,14 @@
 
   <div id="hero">
     <div class="text-box jumbotron container-fluid text-center align-middle vertical-center">
-      <h1 class="text-box__title display-3">Hi, I'm Kevin Gao</h1>
-      <h3 class="text-box__subtitle lead">Front-End Web Developer</h3>
-      <div class="scroll-down-button__container">
-        <a role="button">
-          <svg width="50px" height="50px" aria-hidden="true" focusable="false" data-prefix="fas" data-icon="chevron-down" class="svg-inline--fa fa-chevron-down fa-w-14" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512"><path fill="currentColor" d="M207.029 381.476L12.686 187.132c-9.373-9.373-9.373-24.569 0-33.941l22.667-22.667c9.357-9.357 24.522-9.375 33.901-.04L224 284.505l154.745-154.021c9.379-9.335 24.544-9.317 33.901.04l22.667 22.667c9.373 9.373 9.373 24.569 0 33.941L240.971 381.476c-9.373 9.372-24.569 9.372-33.942 0z"></path></svg>
-        </a>
+      <div class="container text-center">
+        <h1 class="text-box__title display-3">Hi, I'm Kevin Gao</h1>
+        <h3 class="text-box__subtitle lead">Front-End Web Developer</h3>
+        <div class="scroll-down-button__container">
+          <button class="scroll-down-button">
+            <svg width="50px" height="50px" aria-hidden="true" focusable="false" data-prefix="fas" data-icon="chevron-down" class="svg-inline--fa fa-chevron-down fa-w-14" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512"><path fill="currentColor" d="M207.029 381.476L12.686 187.132c-9.373-9.373-9.373-24.569 0-33.941l22.667-22.667c9.357-9.357 24.522-9.375 33.901-.04L224 284.505l154.745-154.021c9.379-9.335 24.544-9.317 33.901.04l22.667 22.667c9.373 9.373 9.373 24.569 0 33.941L240.971 381.476c-9.373 9.372-24.569 9.372-33.942 0z"></path></svg>
+          </button>
+        </div>
       </div>
     </div>
   </div>
@@ -52,7 +57,7 @@
     <div>
       <h2>Portfolio</h2>
     </div>
-    <div id="portfolio__nav">
+    <div class="" id="portfolio__nav">
       <div class="filter">Featured</div>
       <div class="filter">All</div>
       <div class="filter">Hackathons</div>
@@ -109,3 +114,4 @@
     <div class="footer__credits">Made By Kevin Gao</div>
   </div>
 </body>
+</html>
