--- a/public/index.html
+++ b/public/index.html
@@ -12,15 +12,10 @@
 </head>
 <body>
   <div id="navigation">
-    <nav class="navbar navbar-expand-lg navbar-fixed-top" >
-      <a class="navbar-brand" href="#">Kevin Gao</a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon">
-          <svg aria-hidden="true" focusable="false" data-prefix="fas" data-icon="bars" class="svg-inline--fa fa-bars fa-w-14" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512"><path fill="currentColor" d="M16 132h416c8.837 0 16-7.163 16-16V76c0-8.837-7.163-16-16-16H16C7.163 60 0 67.163 0 76v40c0 8.837 7.163 16 16 16zm0 160h416c8.837 0 16-7.163 16-16v-40c0-8.837-7.163-16-16-16H16c-8.837 0-16 7.163-16 16v40c0 8.837 7.163 16 16 16zm0 160h416c8.837 0 16-7.163 16-16v-40c0-8.837-7.163-16-16-16H16c-8.837 0-16 7.163-16 16v40c0 8.837 7.163 16 16 16z"></path></svg>
-        </span>
-      </button>
-      
-      <div class="nav__container ml-auto collapse navbar-collapse" id="navbarSupportedContent">
+    <nav class="navbar navbar-expand navbar-fixed-top" >
+
+      <div class="nav">
+        <a class="navbar-brand mr-auto" href="#">Kevin Gao</a>
         <ul class="navbar-nav ml-auto">
           <li class="nav-item">
             <a class="nav-link active" href="#">Home</a>
@@ -37,14 +32,42 @@
         </ul>
       </div>
 
+      <button class="ml-auto open-overlay">
+        <svg aria-hidden="true" focusable="false" data-prefix="fas" data-icon="bars" class="svg-inline--fa fa-bars fa-w-14" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512"><path fill="currentColor" d="M16 132h416c8.837 0 16-7.163 16-16V76c0-8.837-7.163-16-16-16H16C7.163 60 0 67.163 0 76v40c0 8.837 7.163 16 16 16zm0 160h416c8.837 0 16-7.163 16-16v-40c0-8.837-7.163-16-16-16H16c-8.837 0-16 7.163-16 16v40c0 8.837 7.163 16 16 16zm0 160h416c8.837 0 16-7.163 16-16v-40c0-8.837-7.163-16-16-16H16c-8.837 0-16 7.163-16 16v40c0 8.837 7.163 16 16 16z"></path></svg>
+      </button>
+
     </nav>
+
+    <div class="nav-overlay">
+      <button class="close-overlay">
+        <svg aria-hidden="true" focusable="false" data-prefix="fas" data-icon="times" class="svg-inline--fa fa-times fa-w-11" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 352 512"><path fill="currentColor" d="M242.72 256l100.07-100.07c12.28-12.28 12.28-32.19 0-44.48l-22.24-22.24c-12.28-12.28-32.19-12.28-44.48 0L176 189.28 75.93 89.21c-12.28-12.28-32.19-12.28-44.48 0L9.21 111.45c-12.28 12.28-12.28 32.19 0 44.48L109.28 256 9.21 356.07c-12.28 12.28-12.28 32.19 0 44.48l22.24 22.24c12.28 12.28 32.2 12.28 44.48 0L176 322.72l100.07 100.07c12.28 12.28 32.2 12.28 44.48 0l22.24-22.24c12.28-12.28 12.28-32.19 0-44.48L242.72 256z"></path></svg>
+      </button> 
+      
+      <div class="overlay-content">
+        <ul class="overlay__links">
+          <li class="overlay-link">
+            <a>Home</a>
+          </li>
+          <li class="overlay-link">
+            <a>About</a>
+          </li>
+          <li class="overlay-link">
+            <a>Portfolio</a>
+          </li>
+          <li class="overlay-link">
+            <a>Contact</a>
+          </li>
+        </ul>
+      </div>
+    </div>
+
   </div>
 
   <div id="hero">
     <div class="text-box jumbotron container-fluid text-center align-middle vertical-center">
       <div class="container text-center">
         <h1 class="text-box__title display-3">Hi, I'm Kevin Gao</h1>
-        <h3 class="text-box__subtitle lead">Front-End Web Developer</h3>
+        <h3 class="text-box__subtitle lead">Self Taught High School Front-End Web Developer</h3>
         <div class="scroll-down-button__container">
           <button class="scroll-down-button">
             <svg width="50px" height="50px" aria-hidden="true" focusable="false" data-prefix="fas" data-icon="chevron-down" class="svg-inline--fa fa-chevron-down fa-w-14" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512"><path fill="currentColor" d="M207.029 381.476L12.686 187.132c-9.373-9.373-9.373-24.569 0-33.941l22.667-22.667c9.357-9.357 24.522-9.375 33.901-.04L224 284.505l154.745-154.021c9.379-9.335 24.544-9.317 33.901.04l22.667 22.667c9.373 9.373 9.373 24.569 0 33.941L240.971 381.476c-9.373 9.372-24.569 9.372-33.942 0z"></path></svg>
@@ -54,17 +77,17 @@
     </div>
   </div>
 
-  <div id="portfolio">
+  <section id="portfolio">
     <div class="container">
       <div class="row">
-        <div class="col-sm text-center ">
+        <div class="col-sm text-center col-md-12">
           <div>
-            <h2>Portfolio</h2>
+            <h2 class="portfolio__title">Portfolio</h2>
           </div>
-          <div class="btn-group" role="group" aria-label="Basic example" id="portfolio__nav">
-            <button type="button" class="btn btn-secondary">All</button>
-            <button type="button" class="btn btn-secondary">Featured</button>
-            <button type="button" class="btn btn-secondary">Hackathons</button>
+          <div class="filter-buttons" role="group" aria-label="Basic example" id="portfolio__nav">
+            <div class="filter active" data-filter="all">All</div>
+            <div class="filter" data-filter=".featured">Featured</div>
+            <div class="filter" data-filter=".hackathons">Hackathons</div>
           </div>
         </div>
       </div>
@@ -74,7 +97,7 @@
           <a href="#">
             <figure class="portfolio__item">
               <img src="../assets/portfolio/orderly-lifestyle.png" class="img img-fluid portfolio__thumbnail">
-              <figcaption></figcaption>
+              <figcaption>Web app for tracking activities </figcaption>
             </figure>
           </a>
         </div>
@@ -82,7 +105,7 @@
           <a href="#">
             <figure class="portfolio__item">
               <img src="../assets/portfolio/green-route.png" class="img img-fluid portfolio__thumbnail">
-              <figcaption></figcaption>
+              <figcaption>Web app that finds the most ecofriendly driving route</figcaption>
             </figure>
           </a>
         </div>
@@ -90,7 +113,7 @@
           <a href="#">
             <figure class="portfolio__item">
               <img src="../assets/portfolio/react-calculator.png" class="img img-fluid portfolio__thumbnail">
-              <figcaption></figcaption>
+              <figcaption>Basic react web app calculator</figcaption>
             </figure>
           </a>
         </div>
@@ -98,7 +121,7 @@
           <a href="#">
             <figure class="portfolio__item">
               <img src="../assets/portfolio/spent-web.png" class="img img-fluid portfolio__thumbnail">
-              <figcaption></figcaption>
+              <figcaption>Web app used to track transactions and expenses</figcaption>
             </figure>
           </a>
         </div>
@@ -106,17 +129,37 @@
           <a href="#">
             <figure class="portfolio__item">
               <img src="../assets/portfolio/sock-match.png" class="img img-fluid portfolio__thumbnail">
-              <figcaption></figcaption>
+              <figcaption>React Native mobile application that identifies if two socks are matching for use by the visually impaired.</figcaption>
             </figure>
           </a>
         </div>
-
       </div>
-    </div>
-  </div>
 
-  <div id="contact">
-    <div class="container">
+      <div class="row">
+        <div>
+          <h4>More</h4>
+          <ul>
+            <li>
+              <a><img src="../assets/icons/github-brands.svg"></a>
+              <caption>Github</caption>
+            </li>
+            <li>
+              <a><img src="../assets/icons/linkedin-in-brands.svg"></a>
+              <caption>LinkedIn</caption>
+            </li>
+            <li>
+              <a><img src="../assets/icons/file-solid.svg"></a>
+              <caption>Resume</caption>
+            </li>
+          </ul>
+        </div>
+      </div>
+
+    </div>
+  </section>
+
+  <section id="contact">
+    <div class="contact__container container">
       <div class="row">
         <div class="col text-center">
           <h2>Contact Me</h2>
@@ -137,83 +180,24 @@
         </div>
       </div>
 
-      <div class="row">
-        <div class="col text-center">
-          <h2>Work</h2>
-        </div>
-      </div>
-      <div class="row">
-        <div class="col d-flex justify-content-center">
-          <div class="email contact__info text-center">
-            <a href="https://github.com/KevinBoxuGao">
-              <svg aria-hidden="true" focusable="false" data-prefix="fab" data-icon="github" class="svg-inline--fa fa-github fa-w-16" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 496 512"><path fill="currentColor" d="M165.9 397.4c0 2-2.3 3.6-5.2 3.6-3.3.3-5.6-1.3-5.6-3.6 0-2 2.3-3.6 5.2-3.6 3-.3 5.6 1.3 5.6 3.6zm-31.1-4.5c-.7 2 1.3 4.3 4.3 4.9 2.6 1 5.6 0 6.2-2s-1.3-4.3-4.3-5.2c-2.6-.7-5.5.3-6.2 2.3zm44.2-1.7c-2.9.7-4.9 2.6-4.6 4.9.3 2 2.9 3.3 5.9 2.6 2.9-.7 4.9-2.6 4.6-4.6-.3-1.9-3-3.2-5.9-2.9zM244.8 8C106.1 8 0 113.3 0 252c0 110.9 69.8 205.8 169.5 239.2 12.8 2.3 17.3-5.6 17.3-12.1 0-6.2-.3-40.4-.3-61.4 0 0-70 15-84.7-29.8 0 0-11.4-29.1-27.8-36.6 0 0-22.9-15.7 1.6-15.4 0 0 24.9 2 38.6 25.8 21.9 38.6 58.6 27.5 72.9 20.9 2.3-16 8.8-27.1 16-33.7-55.9-6.2-112.3-14.3-112.3-110.5 0-27.5 7.6-41.3 23.6-58.9-2.6-6.5-11.1-33.3 2.6-67.9 20.9-6.5 69 27 69 27 20-5.6 41.5-8.5 62.8-8.5s42.8 2.9 62.8 8.5c0 0 48.1-33.6 69-27 13.7 34.7 5.2 61.4 2.6 67.9 16 17.7 25.8 31.5 25.8 58.9 0 96.5-58.9 104.2-114.8 110.5 9.2 7.9 17 22.9 17 46.4 0 33.7-.3 75.4-.3 83.6 0 6.5 4.6 14.4 17.3 12.1C428.2 457.8 496 362.9 496 252 496 113.3 383.5 8 244.8 8zM97.2 352.9c-1.3 1-1 3.3.7 5.2 1.6 1.6 3.9 2.3 5.2 1 1.3-1 1-3.3-.7-5.2-1.6-1.6-3.9-2.3-5.2-1zm-10.8-8.1c-.7 1.3.3 2.9 2.3 3.9 1.6 1 3.6.7 4.3-.7.7-1.3-.3-2.9-2.3-3.9-2-.6-3.6-.3-4.3.7zm32.4 35.6c-1.6 1.3-1 4.3 1.3 6.2 2.3 2.3 5.2 2.6 6.5 1 1.3-1.3.7-4.3-1.3-6.2-2.2-2.3-5.2-2.6-6.5-1zm-11.4-14.7c-1.6 1-1.6 3.6 0 5.9 1.6 2.3 4.3 3.3 5.6 2.3 1.6-1.3 1.6-3.9 0-6.2-1.4-2.3-4-3.3-5.6-2z"></path></svg>
-              <p>GitHub</p>
-            </a>
-          </div>
-        </div>
-        <div class="col center-block d-flex justify-content-center">
-          <div class="location contact__info text-center">
-            <a href="../assets/KevinGaoResume.pdf">
-              <svg aria-hidden="true" focusable="false" data-prefix="fas" data-icon="file" class="svg-inline--fa fa-file fa-w-12" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 384 512"><path fill="currentColor" d="M224 136V0H24C10.7 0 0 10.7 0 24v464c0 13.3 10.7 24 24 24h336c13.3 0 24-10.7 24-24V160H248c-13.2 0-24-10.8-24-24zm160-14.1v6.1H256V0h6.1c6.4 0 12.5 2.5 17 7l97.9 98c4.5 4.5 7 10.6 7 16.9z"></path></svg>
-              <p>Resume</p>
-            </a>
-          </div>
-        </div>
-        <div class="col center-block d-flex justify-content-center">
-          <div class="location contact__info text-center">
-            <a href="https://www.linkedin.com/in/kevin-gao-1b8777186/">
-              <svg aria-hidden="true" focusable="false" data-prefix="fab" data-icon="linkedin-in" class="svg-inline--fa fa-linkedin-in fa-w-14" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512"><path fill="currentColor" d="M100.28 448H7.4V148.9h92.88zM53.79 108.1C24.09 108.1 0 83.5 0 53.8a53.79 53.79 0 0 1 107.58 0c0 29.7-24.1 54.3-53.79 54.3zM447.9 448h-92.68V302.4c0-34.7-.7-79.2-48.29-79.2-48.29 0-55.69 37.7-55.69 76.7V448h-92.78V148.9h89.08v40.8h1.3c12.4-23.5 42.69-48.3 87.88-48.3 94 0 111.28 61.9 111.28 142.3V448z"></path></svg>
-              <p>LinkedIn</p>
-            </a>
-          </div>
-        </div>
-      </div>
-
-      <div class="row">
-        <div class="col text-center">
-          <h2>Social</h2>
-        </div>
-      </div>
-      <div class="row">
-        <div class="col d-flex justify-content-center">
-          <div class="email contact__info text-center">
-            <a href="https://github.com/KevinBoxuGao">
-              <svg aria-hidden="true" focusable="false" data-prefix="fab" data-icon="instagram" class="svg-inline--fa fa-instagram fa-w-14" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512"><path fill="currentColor" d="M224.1 141c-63.6 0-114.9 51.3-114.9 114.9s51.3 114.9 114.9 114.9S339 319.5 339 255.9 287.7 141 224.1 141zm0 189.6c-41.1 0-74.7-33.5-74.7-74.7s33.5-74.7 74.7-74.7 74.7 33.5 74.7 74.7-33.6 74.7-74.7 74.7zm146.4-194.3c0 14.9-12 26.8-26.8 26.8-14.9 0-26.8-12-26.8-26.8s12-26.8 26.8-26.8 26.8 12 26.8 26.8zm76.1 27.2c-1.7-35.9-9.9-67.7-36.2-93.9-26.2-26.2-58-34.4-93.9-36.2-37-2.1-147.9-2.1-184.9 0-35.8 1.7-67.6 9.9-93.9 36.1s-34.4 58-36.2 93.9c-2.1 37-2.1 147.9 0 184.9 1.7 35.9 9.9 67.7 36.2 93.9s58 34.4 93.9 36.2c37 2.1 147.9 2.1 184.9 0 35.9-1.7 67.7-9.9 93.9-36.2 26.2-26.2 34.4-58 36.2-93.9 2.1-37 2.1-147.8 0-184.8zM398.8 388c-7.8 19.6-22.9 34.7-42.6 42.6-29.5 11.7-99.5 9-132.1 9s-102.7 2.6-132.1-9c-19.6-7.8-34.7-22.9-42.6-42.6-11.7-29.5-9-99.5-9-132.1s-2.6-102.7 9-132.1c7.8-19.6 22.9-34.7 42.6-42.6 29.5-11.7 99.5-9 132.1-9s102.7-2.6 132.1 9c19.6 7.8 34.7 22.9 42.6 42.6 11.7 29.5 9 99.5 9 132.1s2.7 102.7-9 132.1z"></path></svg>
-              <p>Instagram</p>
-            </a>
-          </div>
-        </div>
-        <div class="col center-block d-flex justify-content-center">
-          <div class="location contact__info text-center">
-            <a href="../assets/KevinGaoResume.pdf">
-              <svg aria-hidden="true" focusable="false" data-prefix="fab" data-icon="twitter" class="svg-inline--fa fa-twitter fa-w-16" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><path fill="currentColor" d="M459.37 151.716c.325 4.548.325 9.097.325 13.645 0 138.72-105.583 298.558-298.558 298.558-59.452 0-114.68-17.219-161.137-47.106 8.447.974 16.568 1.299 25.34 1.299 49.055 0 94.213-16.568 130.274-44.832-46.132-.975-84.792-31.188-98.112-72.772 6.498.974 12.995 1.624 19.818 1.624 9.421 0 18.843-1.3 27.614-3.573-48.081-9.747-84.143-51.98-84.143-102.985v-1.299c13.969 7.797 30.214 12.67 47.431 13.319-28.264-18.843-46.781-51.005-46.781-87.391 0-19.492 5.197-37.36 14.294-52.954 51.655 63.675 129.3 105.258 216.365 109.807-1.624-7.797-2.599-15.918-2.599-24.04 0-57.828 46.782-104.934 104.934-104.934 30.213 0 57.502 12.67 76.67 33.137 23.715-4.548 46.456-13.32 66.599-25.34-7.798 24.366-24.366 44.833-46.132 57.827 21.117-2.273 41.584-8.122 60.426-16.243-14.292 20.791-32.161 39.308-52.628 54.253z"></path></svg>
-              <p>Twitter</p>
-            </a>
-          </div>
-        </div>
-        <div class="col center-block d-flex justify-content-center">
-          <div class="location contact__info text-center">
-            <a href="https://www.linkedin.com/in/kevin-gao-1b8777186/">
-              <svg aria-hidden="true" focusable="false" data-prefix="fab" data-icon="facebook" class="svg-inline--fa fa-facebook fa-w-16" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><path fill="currentColor" d="M504 256C504 119 393 8 256 8S8 119 8 256c0 123.78 90.69 226.38 209.25 245V327.69h-63V256h63v-54.64c0-62.15 37-96.48 93.67-96.48 27.14 0 55.52 4.84 55.52 4.84v61h-31.28c-30.8 0-40.41 19.12-40.41 38.73V256h68.78l-11 71.69h-57.78V501C413.31 482.38 504 379.78 504 256z"></path></svg>
-              <p>Facebook</p>
-            </a>
-          </div>
-        </div>
-
-      </div>
-
     </div>
-  </div>
+  </section>
 
-  <div id="footer">
-    <div class="footer__links">
-      <ul>
-        <li class="github"><a></a></li>
-        <li class="linkedIn"><a></a></li>
-        <li class="twitter"><a></a></li>
-      </ul>
+  <footer id="footer">
+    <div class="container">
+      <div class="text-center">
+        <ul class="footer__links">
+          <li class="github"><a>
+            <img class="footer__image" src="../assets/icons/github-brands.svg">
+          </a></li>
+          <li class="linkedIn"><a>
+            <img class="footer__image" src="../assets/icons/linkedin-in-brands.svg">
+          </a></li>
+          <li class="twitter"><a></a></li>
+        </ul>
+      <div class="footer__credits">Made By Kevin Gao</div>
+      </div>
     </div>
-    <div class="footer__credits">Made By Kevin Gao</div>
-  </div>
+  </footer>
 </body>
 </html>
