--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
             <a href="https://orderly-lifestyle.appspot.com/">
               <figure class="portfolio__item">
                 <img
-                  src="../assets/portfolio/orderly-lifestyle.png"
+                  src="./assets/portfolio/orderly-lifestyle.png"
                   class="img img-fluid portfolio__thumbnail"
                 />
                 <figcaption>
