--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       href="https://fonts.googleapis.com/css?family=Open+Sans|Source+Sans+Pro&display=swap"
       rel="stylesheet"
     />
-  <link href="main.css?4de9baaa153a82c279fd" rel="stylesheet"></head>
+  <link href="main.css" rel="stylesheet"></head>
   <body>
 
 
@@ -304,5 +304,5 @@
         </div>
       </div>
     </footer>
-  <script type="text/javascript" src="main.bundle.js?4de9baaa153a82c279fd"></script></body>
+  <script type="text/javascript" src="main.bundle.js"></script></body>
 </html>
