--- a/public/index.html
+++ b/public/index.html
@@ -71,7 +71,7 @@
         </div>
 
         <div class="row" id="portfolio__content">
-          <div class="project featured hackathon col-md-4 col-sm-6 col-xs-12">
+          <div class="project featured project-active hackathon col-md-4 col-sm-6 col-xs-12">
             <a href="https://orderly-lifestyle.appspot.com/">
               <figure class="portfolio__item">
                 <img
@@ -85,7 +85,7 @@
               </figure>
             </a>
           </div>
-          <div class="project featured hackathon col-md-4 col-sm-6 col-xs-12">
+          <div class="project featured project-active hackathon col-md-4 col-sm-6 col-xs-12">
             <a href="https://green-route.appspot.com/">
               <figure class="portfolio__item">
                 <img
@@ -127,7 +127,7 @@
               </figure>
             </a>
           </div>
-          <div class="project hackathon featured col-md-4 col-sm-6 col-xs-12">
+          <div class="project hackathon featured project-active col-md-4 col-sm-6 col-xs-12">
             <a href="https://expo.io/@kevinboxugao/SockMatch">
               <figure class="portfolio__item">
                 <img
