--- a/public/index.html
+++ b/public/index.html
@@ -8,8 +8,10 @@
     />
     <title>Kevin Gao Web Developer</title>
     <!--Fonts-->
-
-    <link href="index.css" rel="stylesheet" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:ital@0;1&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <div id="root"></div>
