--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,7 @@
     <!--Fonts-->
     <link
       href="https://fonts.googleapis.com/css2?family=Raleway:ital@0;1&display=swap"
-      rel="stylesheet"
+      rel="preload stylesheet"
     />
     <!-- Start Single Page Apps for GitHub Pages -->
     <script type="text/javascript">
