--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <!--Fonts-->
     <link
       href="https://fonts.googleapis.com/css2?family=Raleway:ital@0;1&display=swap"
-      rel="stylesheet"
+      rel="preload stylesheet"
     />
     <!-- Start Single Page Apps for GitHub Pages -->
     <script type="text/javascript">
@@ -46,8 +46,8 @@
       })(window.location);
     </script>
     <!-- End Single Page Apps for GitHub Pages -->
-  <link rel="shortcut icon" href="favicon.ico"><link href="index.css?82ce9c4ddf57bd12da95" rel="stylesheet"></head>
+  <link rel="shortcut icon" href="favicon.ico"><link href="index.css?4272f5f61ff175569b45" rel="stylesheet"></head>
   <body>
     <div id="root"></div>
-  <script type="text/javascript" src="vendor.bundle.js?82ce9c4ddf57bd12da95"></script><script type="text/javascript" src="index.bundle.js?82ce9c4ddf57bd12da95"></script></body>
+  <script type="text/javascript" src="vendor.bundle.js?4272f5f61ff175569b45"></script><script type="text/javascript" src="index.bundle.js?4272f5f61ff175569b45"></script></body>
 </html>
