--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
       name="description"
       content="Kevin Gao's Personal Portfolio Website, showcasing projects, my qualifications, and ways to contact me."
     />
+    <meta property="og:image" content="Frontpage.png" />
     <title>Kevin Gao Web Developer</title>
     <!--Fonts-->
     <link
@@ -46,8 +47,8 @@
       })(window.location);
     </script>
     <!-- End Single Page Apps for GitHub Pages -->
-  <link rel="shortcut icon" href="favicon.ico"><link href="index.css?7150e857694966a697a7" rel="stylesheet"></head>
+  <link rel="shortcut icon" href="favicon.ico"><link href="index.css?1503db71e0b9a67e14b9" rel="stylesheet"></head>
   <body>
     <div id="root"></div>
-  <script type="text/javascript" src="vendor.bundle.js?7150e857694966a697a7"></script><script type="text/javascript" src="index.bundle.js?7150e857694966a697a7"></script></body>
+  <script type="text/javascript" src="vendor.bundle.js?1503db71e0b9a67e14b9"></script><script type="text/javascript" src="index.bundle.js?1503db71e0b9a67e14b9"></script></body>
 </html>
