Add updated projects

--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,7 @@
       name="description"
       content="Kevin Gao's Personal Portfolio Website, showcasing projects, my qualifications, and ways to contact me."
     />
+    <meta property="og:image" content="Frontpage.png" />
     <title>Kevin Gao Web Developer</title>
     <!--Fonts-->
     <link
